# capitalBot

./: .gitignore  Bot.py  Broker.py  Cargo.toml  Config.py  CryptoBot.py  DMQuoteThread.py  DataCenter.py  OSQuoteThread.py  Order_app.py  Profile.py  README.md  SignalManager.py  StrategyEngine.py  TXfp.pq  Ticker_app.py  Trading_app.py  analytics.ipynb  app.py  clickhouseDB.py  data8.py  dev.py  fp_tmp.txt  listDM.py  oversea.py  plot_test.py  pyproject.toml  requirment.txt  stocklist.py  strategy.py  tmp.js  watchlist.py
GUI/: watchlist.py
GUI/plot/: FootprintChart.py  plot_test.py
plotting/: plot_gemini.py  plot_item.py
python/: pyproject.toml  requirements.txt
python/capitalBot/: Order_app.py  Quote_app.py  Ticker_app.py  Trading_app.py  __init__.py  listDM.py  test.py
python/capitalBot/GUI/: VolumeProfile.py  watchlist.py
python/capitalBot/GUI/dom/: ladder.py
python/capitalBot/GUI/plot/: FootprintChart.py  plot_test.py
python/capitalBot/brokers/shioaji/: Broker.py  Sinopac.pfx  fetch_tick.ipynb
python/capitalBot/brokers/skcom/: Broker.py
python/capitalBot/brokers/skcom/quote/: DMQuoteThread.py  OSQuoteThread.py  tools.py
python/capitalBot/core/: DataCenter.py  SignalManager.py  TickerService.py  tools.py
python/capitalBot/core/DBEngine/: Producer.py  Receiver.py  RedisManager.py
python/capitalBot/strategies/: engine.py
python/tests/: test_all.py
quote/: DMQuoteThread.py  OSQuoteThread.py  tools.py
redisworker/: AsyncWorker.py  Async_Worker.py  Producer.py  Receiver.py  Tick_Consumer.py  Tick_Producer.py  rediscache.py
src/: com_events.rs  com_sink.rs  lib.rs
src/com_events/: dispids.rs
