[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_engine"
crate-type = ["cdylib"]

[dependencies]
clickhouse = "0.13.3"
crossbeam-channel = "0.5.15"
paste = "1.0.15"
pyo3 = "0.25.0"
redis = "0.32.5"
windows = { version = "0.61.3", features = ["Win32_System_Com", "Win32_System_Ole", "Win32_System_Variant"] }
windows-core = "0.61.2"
