[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "capitalbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "comtypes>=1.4.11",
    "numba>=0.61.2",
    "pandas>=2.3.1",
    "pyside6==6.9.0",
    "python-dotenv>=1.1.1",
    "pywin32>=311",
    "redis>=6.4.0",
    "setuptools>=80.9.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
